--- a/src/ProductLineLayout.css
+++ b/src/ProductLineLayout.css
@@ -1,5 +1,11 @@
 .productline {
     /* (100% divided by 6 items) */
     flex: 0 0 calc(100% / 6); 
-    height: 300px; /* Or whatever height you prefer */
+    position: relative;
+    width: 75%;
+    height: 40vh;
+    background-color: #000000;
+}
+.title{
+    color: white;
 }
