--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -7,7 +7,7 @@
 }
 
 
-.button {
+/* .button {
     font-family: "SN Pro", sans-serif;
     font-size: 25px;
     color: white;
@@ -25,11 +25,10 @@
     position: absolute;
     top: 50%;
     z-index: 10;
-}
-
+} */
 .swiper-wrapper {
     width: inherit;
-    height: inherit;
+    height: 100%;
 }
 
 .swiper-slide {
@@ -53,11 +52,12 @@
 }
 
 .swiper {
-   
     width: 25%;
     height: 75%;
-    padding:0 10% 0 40%;
-    margin: 0%;
+    margin: 0;
+    padding-right: 5%;
+    align-self: center;
+    --swiper-navigation-sides-offset: 10%;
 }
 
 .swiper-button-next,
@@ -93,11 +93,6 @@
 .swiper-button-prev.swiper-button-disabled,
 .swiper-button-next.swiper-button-disabled {
     opacity: 0;
-}
-
-.carousel-container {
-    position: relative;
-    overflow: visible;
 }
 
 .swiper-slide {
