--- a/src/Header.css
+++ b/src/Header.css
@@ -48,6 +48,13 @@ header {
     cursor: pointer;
 }
 
+.profile:hover {
+    background-color: rgb(53, 161, 224);
+    border: 0 transparent;
+    border-radius: 10px;
+    padding: 10px;
+}
+
 .searchBar {
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
