--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,16 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+.box5{
+  height: 50dvh;
+  width: 100%;
+}
+
+.productline2{
+  height:75%;
+
+}
+.productline2 > h2{
+  text-align: center;
+}
