--- a/src/Carousel.css
+++ b/src/Carousel.css
@@ -48,16 +48,23 @@
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    object-fit: fill;
+    flex-direction: column-reverse;
+}
+
+.swiper-slide > * {
+    width:100%;
+    height:100%;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .swiper {
-    width: 40%;
-    height: 75%;
+    width: 70%;
+    height: 100%;
     margin: 0;
-    padding-right: 5%;
     align-self: center;
-    --swiper-navigation-sides-offset: 10%;
+    --swiper-navigation-sides-offset: -2%;
+    --swiper-navigation-top-offset: 40%;
 }
 
 .swiper-button-next,
